Eliminación total de supabase debido a interferencia con los puntos del AE1 y mejora de la OpenAPI con una mejor construcción
